alle pages and details and style

--- a/gold.html
+++ b/gold.html
@@ -31,6 +31,13 @@
                 <p class="checkOut__title">Duitsland 2 Euro F = Stuttgart</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
             </li>
+            
+            <li class="checkOut__listItem">
+                <img src="/img/lightskin.gif" alt="champagne" class="checkOut__image">
+                <p class="checkOut__title">Lightskin</p>
+                <p id="js--amount-champagne3" class="checkOut__amount"></p>
+            </li>
+
         </ul>
     </section>
     <article class="modal a-popup" id="js--shoppingModal">
@@ -75,6 +82,17 @@
                     <a href="/productpage.html"><button class="game__button">Details</button></a>
                     <a href="/productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
+            </li>
+            <li class="games__game a-popup">
+                <figure class="game__figure"><img src="/img/lightskin.gif" alt="champagne" class="game__img"></figure>
+                 <section class="games__body">
+                    <h2 class="games__h2">€111519,99</h2>
+                    <h3 class="games__h3">Lightskin</h3>
+                    <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
+                    <button data-product="champagne2" class="games__button">Add to Cart</button>
+                    <a href="/productpage3.html"><button class="game__button">Details</button></a>
+                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                 </section>
             </li>
         </ul>
     </main>
