--- a/html/main.html
+++ b/html/main.html
@@ -35,7 +35,8 @@
     <div class="wrapper">
       <div class="label">Submit your search</div>
       <div class="searchBar">
-        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Hello men!!!!!!!!!!!!!!!!!!!" value="" />
+        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Hello men!!!!!!!!!!!!!!!!!!!"
+          value="" />
         <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
           <svg style="width:40px;height:30px" viewBox="9 2 20 24">
             <path fill="#39b54a"
@@ -63,9 +64,9 @@
     <li><a href="/html/main.html">Home</a></li>
     <li><a href="/about-us.html">About-us</a></li>
     <li><a href="#">Information</a></li>
-    <li><a href="/productpage1.html">Products page</a></li>
+    <li><a href="/productpage1.html">Products page#1</a></li>
+    <li><a href="/contact.html">Product page#2</a></li>
     <li><a href="/developer.html">Developers</a></li>
-    <li><a href="/contact.html">contact</a></li>
     <li><a href="/location.html">Location</a></li>
     <li><a href="/login.html">Log-in</a></li>
 
@@ -111,7 +112,7 @@
       <h5>Welcome</h5>
       <h1>Greedy's Coins</h1>
       <h4>Greedy's coins: Discover the True Value of Collectible Coins!</h4>
-      <a href="/about-us.html">Prices</a>
+      <a href="/about-us.html">Buy now!</a>
       <a href="/about-us.html" class="ctaa"> <i class="ri-play-fill"></i>Take a look at the coins</a>
     </article>
 
@@ -360,9 +361,7 @@
     <article class="row">
       <section class="col">
         <img src="/img/logo7.png" alt="" class="logo">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem repudiandae aspernatur ullam.
-          Eaque itaque sed quae, maiores laborum soluta suscipit enim, dolore sequi laboriosam sunt, accusamus hic iste
-          quas.</p>
+        <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
       </section>
 
       <section class="col">
@@ -381,12 +380,10 @@
           <li><a href="/html/main.html">Home</a></li>
           <li><a href="/about-us.html">About-us</a></li>
           <li><a href="#">Information</a></li>
-          <li><a href="/productpage1.html">Products page#1</a></li>
-          <li><a href="#">Products page#2</a></li>
-          <li><a href="#">Prices</a></li>
-          <li><a href="#">Deals</a></li>
+          <li><a href="/productpage1.html">Products page</a></li>
           <li><a href="/developer.html">Developers</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/contact.html">contact</a></li>
+          <li><a href="/location.html">Location</a></li>
           <li><a href="/login.html">Log-in</a></li>
         </ul>
       </section>
