--- a/info.html
+++ b/info.html
@@ -56,7 +56,7 @@
         <article class="row">
             <section class="col">
                 <img src="/img/logo7.png" alt="" class="logo">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem repudiandae aspernatur ullam. Eaque itaque sed quae, maiores laborum soluta suscipit enim, dolore sequi laboriosam sunt, accusamus hic iste quas.</p>
+                <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
             </section>
 
             <section class="col">
