--- a/productpage1.html
+++ b/productpage1.html
@@ -134,12 +134,17 @@
         <li class="part" data-category="part--1"><img src="img/product1nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 2 euro Nederland 2001 BEATRIX</p>
-        <a href="dutch.html"><h2>Op vooraad > </h2></a>
+        <a href="dutch.html">
+          <h2>Op vooraad > </h2>
+        </a>
+        <a href="productpage2.html">
+          <h2>Details < </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="dutch.html"><button type="button">add to cart</button></a>
         </section>
-        
+
 
       </section>
 
@@ -148,7 +153,9 @@
         <li class="part" data-category="part--4"><img src="img/banknotes1.png"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>100 Gulden "Snip" 1977 ZFr+</p>
-        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
+        <a href="banknotes.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="banknotes.html"><button type="button">add to cart</button></a>
@@ -157,10 +164,12 @@
 
       <section class="part--section">
         <li class="part" data-category="part--3"><img src="img/silver1.png" alt="figuurtje van DIO"></li>
-       <p>2022 St. Helena 1 oz Silver Queens Coin</p>
-       <a href="silver.html"><h2>Op vooraad > </h2></a>
-       <h2>test</h2>
-       <section class="about">
+        <p>2022 St. Helena 1 oz Silver Queens Coin</p>
+        <a href="silver.html">
+          <h2>Op vooraad  </h2>
+        </a>
+        <h2>test</h2>
+        <section class="about">
           <a href="silver.html"><button type="button">add to cart</button></a>
         </section>
 
@@ -170,7 +179,12 @@
         <li class="part" data-category="part--1"><img src="img/product2nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 1 euro Nederland 2001 BEATRIX</p>
-        <a href="dutch.html"><h2>Op vooraad > </h2></a>
+        <a href="dutch.html">
+          <h2>Op vooraad > </h2>
+        </a>
+        <a href="productpage3.html">
+          <h2>Details < </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="dutch.html"><button type="button">add to cart</button></a>
@@ -181,7 +195,9 @@
       <section class="part--section">
         <li class="part" data-category="part--2"><img src="img/gold1.png" alt="figuurtje van Esidisi"></li>
         <p>2 Euro 2000, Juan Carlos I spain</p>
-        <a href="gold.html"><h2>Op vooraad > </h2></a>
+        <a href="gold.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="gold.html"><button type="button">add to cart</button></a>
@@ -193,7 +209,9 @@
         <li class="part" data-category="part--4"><img src="img/banknotes2.png"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>Netherlands 1000 Gulden Banknote 1972</p>
-        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
+        <a href="banknotes.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="banknotes.html"><button type="button">add to cart</button></a>
@@ -204,7 +222,9 @@
         <li class="part" data-category="part--1"><img src="img/product3nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Koningin Beatrix 5 EuroCent</p>
-        <a href="dutch.html"><h2>Op vooraad > </h2></a>
+        <a href="dutch.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="dutch.html"><button type="button">add to cart</button></a>
@@ -212,10 +232,12 @@
 
       </section>
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold2.png"
-            alt="figuurtje van de stand Joseph joestar"></li>
+        <li class="part" data-category="part--2"><img src="img/gold2.png" alt="figuurtje van de stand Joseph joestar">
+        </li>
         <p>50 cent euromunt Frankrijk 1999</p>
-        <a href="gold.html"><h2>Op vooraad > </h2></a>
+        <a href="gold.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="gold.html"><button type="button">add to cart</button></a>
@@ -224,10 +246,12 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver2.png"
-            alt="figuurtje van de stand Jotaro Kujo"></li>
+        <li class="part" data-category="part--3"><img src="img/silver2.png" alt="figuurtje van de stand Jotaro Kujo">
+        </li>
         <p>Australia Silver Coin 2017 Koala Elizabeth II</p>
-        <a href="silver.html"><h2>Op vooraad > </h2></a>
+        <a href="silver.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="silver.html"><button type="button">add to cart</button></a>
@@ -239,7 +263,9 @@
         <li class="part" data-category="part--4"><img src="img/banknotes3.png"
             alt="figuurtje van de stand Killer Queen"></li>
         <p>Banknote China 10 Yen - Dragon - ND 1939</p>
-        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
+        <a href="banknotes.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="banknotes.html"><button type="button">add to cart</button></a>
@@ -248,12 +274,14 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold3.png"
-            alt="figuurtje van de stand Joseph joestar"></li>
-       <p>Duitsland 2 Euro F = Stuttgart</p>
-       <a href="gold.html"><h2>Op vooraad > </h2></a>
-       <h2>test</h2>
-       <section class="about">
+        <li class="part" data-category="part--2"><img src="img/gold3.png" alt="figuurtje van de stand Joseph joestar">
+        </li>
+        <p>Duitsland 2 Euro F = Stuttgart</p>
+        <a href="gold.html">
+          <h2>Op vooraad > </h2>
+        </a>
+        <h2>test</h2>
+        <section class="about">
           <a href="gold.html"><button type="button">add to cart</button></a>
         </section>
 
@@ -264,7 +292,9 @@
         <li class="part" data-category="part--3"><img src="img/silver3.png"
             alt="figuurtje van de stand The World - Limited Edition"></li>
         <p>1 troy ounce silver coin Maple Leaf</p>
-        <a href="silver.html"><h2>Op vooraad > </h2></a>
+        <a href="silver.html">
+          <h2>Op vooraad > </h2>
+        </a>
         <h2>test</h2>
         <section class="about">
           <a href="silver.html"><button type="button">add to cart</button></a>
@@ -281,9 +311,7 @@
     <article class="row">
       <section class="col">
         <img src="/img/logo7.png" alt="" class="logo">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem repudiandae aspernatur ullam.
-          Eaque itaque sed quae, maiores laborum soluta suscipit enim, dolore sequi laboriosam sunt, accusamus hic iste
-          quas.</p>
+        <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
       </section>
 
       <section class="col">
@@ -302,12 +330,10 @@
           <li><a href="/html/main.html">Home</a></li>
           <li><a href="/about-us.html">About-us</a></li>
           <li><a href="#">Information</a></li>
-          <li><a href="/productpage1.html">Products page#1</a></li>
-          <li><a href="#">Products page#2</a></li>
-          <li><a href="#">Prices</a></li>
-          <li><a href="#">Deals</a></li>
+          <li><a href="/productpage1.html">Products page</a></li>
           <li><a href="/developer.html">Developers</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/contact.html">contact</a></li>
+          <li><a href="/location.html">Location</a></li>
           <li><a href="/login.html">Log-in</a></li>
         </ul>
       </section>
