px to rem and new pages

--- a/productpage3.html
+++ b/productpage3.html
@@ -117,6 +117,10 @@
                 <input type="radio" name="selectedSize" id="size-xs" value="xs">
                 <label for="size-xs">Used</label>
               </li>
+              <li>
+                <input type="radio" name="selectedSize" id="size-xsss" value="xs">
+                <label for="size-xsss">Fake</label>
+              </li>
 
           </div>
           <form class="add-to-cart-form">
