--- a/html/main.html
+++ b/html/main.html
@@ -64,8 +64,8 @@
     <li><a href="/html/main.html">Home</a></li>
     <li><a href="/about-us.html">About-us</a></li>
     <li><a href="#">Information</a></li>
-    <li><a href="/productpage1.html">Products page#1</a></li>
-    <li><a href="/contact.html">Product page#2</a></li>
+    <li><a href="/productpage1.html">Products page</a></li>
+    <li><a href="/contact.html">Contact</a></li>
     <li><a href="/developer.html">Developers</a></li>
     <li><a href="/location.html">Location</a></li>
     <li><a href="/login.html">Log-in</a></li>
