--- a/productpage1.html
+++ b/productpage1.html
@@ -43,7 +43,7 @@
 
 
     <article class="cart">
-      <a href="/productpage1.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="/dutch.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </article>
 
 
@@ -138,7 +138,7 @@
           <input type="range" min="10" max="2500" value="2500" id="upper">
         </div>
         <div class="price-wrap">
-          <button class="price-title" onclick="pricebuttonlist()">FILTER</button>
+          <span class="price-title" onclick="pricebuttonlist()">FILTER</span>
           <div class="price-container">
             <div class="price-wrap-1">
 
@@ -171,7 +171,7 @@
         <li value="399,99" class="price-product">€399,99</li>
 
         <section class="about">
-          <a href="dutch.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
 
@@ -187,7 +187,7 @@
         </a>
         <li value="69,99" class="price-product">€69,99</li>
         <section class="about">
-          <a href="banknotes.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
       </section>
 
@@ -199,7 +199,7 @@
         </a>
         <li value="34,99" class="price-product">€34,99</li>
         <section class="about">
-          <a href="silver.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -216,7 +216,7 @@
         </a>
         <li value="249,99" class="price-product">€249,99</li>
         <section class="about">
-          <a href="dutch.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -229,7 +229,7 @@
         </a>
         <li value="224,99" class="price-product">€224,99</li>
         <section class="about">
-          <a href="gold.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -243,7 +243,7 @@
         </a>
         <li value="174,99" class="price-product">€174,99</li>
         <section class="about">
-          <a href="banknotes.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
       </section>
 
@@ -256,7 +256,7 @@
         </a>
         <li value="149,99" class="price-product">€149,99</li>
         <section class="about">
-          <a href="dutch.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -269,7 +269,7 @@
         </a>
         <li value="99,99" class="price-product">€99,99</li>
         <section class="about">
-          <a href="gold.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -283,7 +283,7 @@
         </a>
         <li value="34,99" class="price-product">€34,99</li>
         <section class="about">
-          <a href="silver.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -297,7 +297,7 @@
         </a>
         <li value="2500" class="price-product">€2500</li>
         <section class="about">
-          <a href="banknotes.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -311,7 +311,7 @@
         </a>
         <li value="239,99" class="price-product">€239,99</li>
         <section class="about">
-          <a href="gold.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -326,7 +326,7 @@
         </a>
         <li value="44,99" class="price-product">€44,99</li>
         <section class="about">
-          <a href="silver.html"><button type="button">add to cart</button></a>
+          <a href="#"><button type="button">add to cart</button></a>
         </section>
 
       </section>
