--- a/silverpage.html
+++ b/silverpage.html
@@ -10,12 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab:wght@200;400;600;800&family=Tomorrow:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <script src="silverpage.js" defer></script>
+    
 </head>
 
 <body>
-
-
 
 
     <section id="js--checkOutWindow" class="checkOut a-popup">
@@ -171,6 +169,7 @@
 
         </ul>
     </main>
+    <script src="/silverpage..js" defer></script>
 </body>
 
 </html>
