shoppingcartand px to rem and styling

--- a/goldpage.html
+++ b/goldpage.html
@@ -24,28 +24,28 @@
                 <img src="/img/gold1.png" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">2 Euro 2000, Juan Carlos I spain</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
-                <p id="total--price1"></p>
+                <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/gold2.png" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">50 cent euromunt Frankrijk 1999</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
-                <p id="total--price2"></p>
+                <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/gold3.png" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">Duitsland 2 Euro F = Stuttgart</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
-                <p id="total--price3"></p>
+                <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/product3nl.png" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">KONINGIN BEATRIX 5 EUROCENT</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
-                <p id="total--price4"></p>
+                <p class="total--price4" id="total--price4"></p>
                
             </li>
-            <p  id="total--price" ></p>
+            <p  class="total--price" id="total--price" ></p> <a href="goldpage.html"><p class="change--product">Change</p></a>
         </ul>
     </section>
     <article class="modal a-popup" id="js--shoppingModal">
