--- a/productpage2.html
+++ b/productpage2.html
@@ -59,8 +59,8 @@
     <li><a href="/html/main.html">Home</a></li>
     <li><a href="/about-us.html">About-us</a></li>
     <li><a href="#">Information</a></li>
-    <li><a href="/productpage1.html">Products page#1</a></li>
-    <li><a href="/contact.html">Product page#2</a></li>
+    <li><a href="/productpage1.html">All products</a></li>
+    <li><a href="/contact.html">Contact</a></li>
     <li><a href="/developer.html">Developers</a></li>
     <li><a href="/location.html">Location</a></li>
     <li><a href="/login.html">Log-in</a></li>
@@ -171,7 +171,7 @@
             <form>
               <i class="fa-solid fa-envelope"></i>
               <input type="email" placeholder="Enter your email id" required>
-              <button type="submit"><i class="fa-solid fa-arrow-right"></i></button>
+              <span type="submit"><i class="fa-solid fa-arrow-right"></i></span>
             </form>
             <article class="social-icons">
               <a href=""><i class="fa-brands fa-square-facebook"></i></a>
