new page and linked all pages almost done

--- a/html/main.html
+++ b/html/main.html
@@ -79,11 +79,11 @@
       <li class="norm li-1"><a href="/html/main.html">Home</a></li>
       <li class="norm li-1"><a href="#">Prices</a></li>
       <li class="norm li-1"><a href="#">Deals</a></li>
-      <li class="norm li-1"><a href="/about-us.html">Dutch</a></li>
-      <li class="norm li-1"><a href="/info.html">Gold</a></li>
-      <li class="norm li-1"><a href="/developer.html">Silver</a></li>
-      <li class="norm li-1"><a href="/contact.html">Banknotes</a></li>
-      <li class="norm li-1"><a href="/login.html">Coming soon!</a></li>
+      <li class="norm li-1"><a href="/dutch.html">Dutch</a></li>
+      <li class="norm li-1"><a href="/goldpage.html">Gold</a></li>
+      <li class="norm li-1"><a href="/silverpage.html">Silver</a></li>
+      <li class="norm li-1"><a href="/banknotes.html">Banknotes</a></li>
+      <li class="norm li-1"><a href="#">Coming soon!</a></li>
       <li class="dropdown norm li-1" id="click-slide">
         <a href="#" class="dropdown-toggle" id="drop" data-toggle="dropdown" onclick="toggleSlider();" role="button"
           aria-expanded="false">Products &nbsp; &#9660;</a>
@@ -91,8 +91,8 @@
         <ul class="dropdown-menu" id="dropdown-menu-r" role="menu">
           <li><a href="/productpage1.html">All Products</a></li>
           <li><a href="/dutch.html">Dutch</a></li>
-          <li><a href="/gold.html">Gold</a></li>
-          <li><a href="/silver.html">Silver</a></li>
+          <li><a href="/goldpage.html">Gold</a></li>
+          <li><a href="/silverpage.html">Silver</a></li>
           <li><a href="/banknotes.html">Banknotes</a></li>
         </ul>
       </li>
@@ -112,11 +112,11 @@
       <h5>Welcome</h5>
       <h1>Greedy's Coins</h1>
       <h4>Greedy's coins: Discover the True Value of Collectible Coins!</h4>
-      <a href="/about-us.html">Buy now!</a>
-      <a href="/about-us.html" class="ctaa"> <i class="ri-play-fill"></i>Take a look at the coins</a>
+      <a href="/dutch.html">Buy now!</a>
+      <a href="/productpage1.html" class="ctaa"> <i class="ri-play-fill"></i>Take a look at the coins</a>
     </article>
 
-    <section class="hero-img">
+    <section class="hero-3">
       <img src="/img/product1nl.png" alt="">
     </section>
 
@@ -144,7 +144,7 @@
         daarachter Juliana. Beiden kijken naar links,
         de kijkrichting van de nieuwe Koningin, als symbool voor de overgangsfase.
       </p>
-      <a href="#">
+      <a href="/dutch.html">
         <section class="wrap">
           <a href="/dutch.html"><button class="button">Buy now!</button></a>
         </section>
@@ -156,10 +156,10 @@
 
   <ul class="parts">
     <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/silver1.png" alt="figuurtje van bucciarati"></li>
+      <li class="part" data-category="Banknotes"><img src="/img/banknotes1.png" alt="figuurtje van bucciarati"></li>
       <h2>100 Gulden "Snip" 1977 ZFr+</h2>
       <h1>€39,99</h1>
-      <a href="/silver.html">
+      <a href="/banknotes.html">
         <p class="part--p">op vooraad > </p>
       </a>
 
@@ -257,7 +257,7 @@
           Normally the saying 'God be with us' is on the coin.
         </p>
         <section class="about">
-          <a href=""><button type="button">Buy now!</button></a>
+          <a href="/dutch.html"><button type="button">Buy now!</button></a>
         </section>
       </div>
       <img src="/img/product1nl.png" alt="" />
@@ -383,7 +383,7 @@
           <li><a href="/productpage1.html">Products page</a></li>
           <li><a href="/developer.html">Developers</a></li>
           <li><a href="/contact.html">contact</a></li>
-          <li><a href="/location.html">Location</a></li>
+          <li><a href="#">Location</a></li>
           <li><a href="/login.html">Log-in</a></li>
         </ul>
       </section>
