--- a/silverpage.html
+++ b/silverpage.html
@@ -10,34 +10,42 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab:wght@200;400;600;800&family=Tomorrow:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
-    
+    <script src="silverpage.js" defer></script>
 </head>
 
 <body>
+
+
 
 
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
                 <img src="/img/silver1.png" alt="champagne" class="checkOut__image">
-                <p class="checkOut__title">2022 St. Helena 1 oz Silver Queens Virtues Truth Coin</p>
+                <p class="checkOut__title">2022 ST. HELENA 1 OZ SILVER QUEENS COIN</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
+                <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/silver2.png" alt="champagne" class="checkOut__image">
-                <p class="checkOut__title">Australia Silver Coin, 2017, Koala, Queen Elizabeth II</p>
+                <p class="checkOut__title">AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
+                <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/silver3.png" alt="champagne" class="checkOut__image">
-                <p class="checkOut__title">1 troy ounce silver coin Maple Leaf</p>
+                <p class="checkOut__title">Duitsland 2 Euro F = Stuttgart</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
+                <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/gold3.png" alt="champagne" class="checkOut__image">
-                <p class="checkOut__title">DUITSLAND 2 EURO F = STUTTGART</p>
+                <img src="/img/banknotes3.png" alt="champagne" class="checkOut__image">
+                <p class="checkOut__title">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
+                <p class="total--price4" id="total--price4"></p>
+               
             </li>
+            <p  class="total--price" id="total--price" ></p> <a href="goldpage.html"><p class="change--product">Change</p></a>
         </ul>
     </section>
     <article class="modal a-popup" id="js--shoppingModal">
@@ -52,8 +60,8 @@
             <li class="games__game a-popup">
                 <figure class="game__figure"><img src="/img/silver1.png" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
-                    <h2 class="games__h2">€44,99</h2>
-                    <h3 class="games__h3">2022 St. Helena 1 oz Silver Queens Virtues Truth Coin</h3>
+                    <h2 class="games__h2">€34,99</h2>
+                    <h3 class="games__h3">2022 ST. HELENA 1 OZ SILVER QUEENS COIN</h3>
                     <div class="size-options">
                         <p class="preview"><b>Type:</b></p>
                         <ul class="size-list">
@@ -82,7 +90,7 @@
                 <figure class="game__figure"><img src="/img/silver2.png" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€34,99</h2>
-                    <h3 class="games__h3">Australia Silver Coin, 2017, Koala, Queen Elizabeth II</h3>
+                    <h3 class="games__h3">AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II</h3>
                     <div class="size-options">
                         <p class="preview"><b>Type:</b></p>
                         <ul class="size-list">
@@ -110,8 +118,8 @@
             <li class="games__game a-popup">
                 <figure class="game__figure"><img src="/img/silver3.png" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
-                    <h2 class="games__h2">€42,50</h2>
-                    <h3 class="games__h3">1 troy ounce silver coin Maple Leaf</h3>
+                    <h2 class="games__h2">€44,99</h2>
+                    <h3 class="games__h3">1 TROY OUNCE SILVER COIN MAPLE LEAF</h3>
                     <div class="size-options">
                         <p class="preview"><b>Type:</b></p>
                         <ul class="size-list">
@@ -137,10 +145,10 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/gold3.png" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="/img/banknotes3.png" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
-                    <h2 class="games__h2">€224,99</h2>
-                    <h3 class="games__h3">DUITSLAND 2 EURO F = STUTTGART</h3>
+                    <h2 class="games__h2">€2500</h2>
+                    <h3 class="games__h3">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</h3>
                     <div class="size-options">
                         <p class="preview"><b>Type:</b></p>
                         <ul class="size-list">
@@ -169,7 +177,6 @@
 
         </ul>
     </main>
-    <script src="/silverpage..js" defer></script>
 </body>
 
 </html>
